<resources>
    <string name="app_name">MusicPlayer</string>

    <!-- song  -->
    <string name="singer">Ca sĩ</string>
    <string name="random">Random</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
    <string name="totaltime">--:--</string>
    <string name="runtime">--:--</string>
    <string name="love">Love</string>
    <string name="single">Singer Name</string>
    <string name="title">Song Name</string>
    <string name="gredientbg">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="searchContext">Type something here</string>
</resources>