<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/bgr_playnhac"
    android:orientation="vertical"
    tools:context=".Activity.PlayControlActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/collapse"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:elevation="0dp"
        android:gravity="center_horizontal"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/imageGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-6dp"
        android:background="@drawable/dark"
        android:contentDescription="@string/gredientbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/thumnail"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_below="@+id/collapse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/music_rect" />

    <RelativeLayout
        android:id="@+id/inforSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thumnail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="310dp"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/singerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/songName"
            android:layout_marginTop="8dp"
            android:maxWidth="350dp"
            android:text="@string/single"
            android:textColor="#E4E4E4"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/Favorite"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_love"
            android:contentDescription="@string/love"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBartime"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/inforSong"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:progressTint="#FFFFFF"
        android:thumb="@drawable/thumb" />

    <RelativeLayout
        android:id="@+id/inforTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBartime"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/textViewruntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runtime"
            android:textColor="#E4E4E4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewtimetotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/totaltime"
            android:textColor="#E8E8E8"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/inforTime"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/shuffleBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/previousBtn"
            android:background="@null"
            android:contentDescription="@string/random"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconsuffle" />

        <ImageButton
            android:id="@+id/previousBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/playPauseBtn"
            android:background="@null"
            android:contentDescription="@string/previous"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconpreview" />

        <ImageButton
            android:id="@+id/playPauseBtn"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/pause"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/play" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/playPauseBtn"
            android:background="@null"
            android:contentDescription="@string/next"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconnext" />

        <ImageButton
            android:id="@+id/loopBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/nextBtn"
            android:background="@null"
            android:contentDescription="@string/repeat"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconrepeat" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/collapseImageView"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="373dp"
        android:background="@null"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/arrow_down" />
</RelativeLayout>